; ModuleID = '/home/carl/AnghaBench/numpy/numpy/core/src/multiarray/extr_methods.c_array_searchsorted.c'
source_filename = "/home/carl/AnghaBench/numpy/numpy/core/src/multiarray/extr_methods.c_array_searchsorted.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@array_searchsorted.kwlist = internal global [4 x i8*] [i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i32 0, i32 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.2, i32 0, i32 0), i8* null], align 16
@.str = private unnamed_addr constant [5 x i8] c"keys\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"side\00", align 1
@.str.2 = private unnamed_addr constant [7 x i8] c"sorter\00", align 1
@NPY_SEARCHLEFT = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [19 x i8] c"O|O&O:searchsorted\00", align 1
@PyArray_SearchsideConverter = common dso_local global i32 0, align 4
@Py_None = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32*, i32*)* @array_searchsorted to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @array_searchsorted(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  %11 = load i32, i32* @NPY_SEARCHLEFT, align 4
  store i32 %11, i32* %10, align 4
  store i32* null, i32** %9, align 8
  %12 = load i32*, i32** %6, align 8
  %13 = load i32*, i32** %7, align 8
  %14 = load i32, i32* @PyArray_SearchsideConverter, align 4
  %15 = call i32 @PyArg_ParseTupleAndKeywords(i32* %12, i32* %13, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.3, i64 0, i64 0), i8** getelementptr inbounds ([4 x i8*], [4 x i8*]* @array_searchsorted.kwlist, i64 0, i64 0), i32** %8, i32 %14, i32* %10, i32** %9)
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %18, label %17

17:                                               ; preds = %3
  store i32* null, i32** %4, align 8
  br label %31

18:                                               ; preds = %3
  %19 = load i32*, i32** %9, align 8
  %20 = load i32*, i32** @Py_None, align 8
  %21 = icmp eq i32* %19, %20
  br i1 %21, label %22, label %23

22:                                               ; preds = %18
  store i32* null, i32** %9, align 8
  br label %23

23:                                               ; preds = %22, %18
  %24 = load i32*, i32** %5, align 8
  %25 = load i32*, i32** %8, align 8
  %26 = load i32, i32* %10, align 4
  %27 = load i32*, i32** %9, align 8
  %28 = call i64 @PyArray_SearchSorted(i32* %24, i32* %25, i32 %26, i32* %27)
  %29 = inttoptr i64 %28 to i32*
  %30 = call i32* @PyArray_Return(i32* %29)
  store i32* %30, i32** %4, align 8
  br label %31

31:                                               ; preds = %23, %17
  %32 = load i32*, i32** %4, align 8
  ret i32* %32
}

declare dso_local i32 @PyArg_ParseTupleAndKeywords(i32*, i32*, i8*, i8**, i32**, i32, i32*, i32**) #1

declare dso_local i32* @PyArray_Return(i32*) #1

declare dso_local i64 @PyArray_SearchSorted(i32*, i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
